# RAG_with_clustered_documents

./: .gitignore  README.md  main.py  pyproject.toml  run_experiments.sh
evaluation/: retriever_eval.py
pipeline_utils/: bert_trainer.py  download_helper.py  embedder.py  kmeans_cluster.py  preprocessor.py  run_all_preprocessing.py  split_dataset.py
retriever/: BM25.py  cluster_constrained_FAISS.py  cluster_constrained_retrieval.py  cosine_embeddings.py
